testdata/baselines/reference/compiler/mappedTypeOverAnyStructuralAssignability.errors.txt
mappedTypeOverAnyStructuralAssignability.ts(15,7): error TS2322: Type 'ObjectSchema<{ foo: string; bar: number; }>' is not assignable to type 'ObjectSchema<any>'.
  The types returned by 'nullable().concat' are incompatible between these types.
    Type '(schema: ObjectSchema<{ foo: string; bar: number; } | null>) => ObjectSchema<{ foo: string; bar: number; } | null>' is not assignable to type '(schema: ObjectSchema<any>) => ObjectSchema<any>'.
      Types of parameters 'schema' and 'schema' are incompatible.
        Type 'ObjectSchema<any>' is not assignable to type 'ObjectSchema<{ foo: string; bar: number; } | null>'.
          Types of property 'fields' are incompatible.
            Type 'Shape<any>' is missing the following properties from type 'Shape<{ foo: string; bar: number; }>': foo, bar


==== mappedTypeOverAnyStructuralAssignability.ts (1 errors) ====
    // Reduced from yup@1.6.1; https://github.com/microsoft/typescript-go/issues/4451
    // ObjectSchema<{ foo, bar }> should be assignable to ObjectSchema<any>, but tsgo
    // reports the mapped type Shape<any> as missing keys foo, bar; tsc accepts it.
    // The contravariant `concat` parameter flips the comparison so Shape<any> is
    // checked as the source against Shape<{ foo, bar }>.
    type Shape<T> = { [field in keyof T]-?: T[field]; };
    interface ObjectSchema<TIn> {
        __outputType: TIn extends {} ? {} : TIn;
        nullable(): ObjectSchema<TIn | null>;
        fields: Shape<NonNullable<TIn>>;
        concat(schema: this): this;
        partial(): ObjectSchema<Partial<TIn>>;
    }
    declare const specific: ObjectSchema<{ foo: string; bar: number }>;
    const test: ObjectSchema<any> = specific;
          ~~~~
!!! error TS2322: Type 'ObjectSchema<{ foo: string; bar: number; }>' is not assignable to type 'ObjectSchema<any>'.
!!! error TS2322:   The types returned by 'nullable().concat' are incompatible between these types.
!!! error TS2322:     Type '(schema: ObjectSchema<{ foo: string; bar: number; } | null>) => ObjectSchema<{ foo: string; bar: number; } | null>' is not assignable to type '(schema: ObjectSchema<any>) => ObjectSchema<any>'.
!!! error TS2322:       Types of parameters 'schema' and 'schema' are incompatible.
!!! error TS2322:         Type 'ObjectSchema<any>' is not assignable to type 'ObjectSchema<{ foo: string; bar: number; } | null>'.
!!! error TS2322:           Types of property 'fields' are incompatible.
!!! error TS2322:             Type 'Shape<any>' is missing the following properties from type 'Shape<{ foo: string; bar: number; }>': foo, bar
    